--- a/index.html
+++ b/index.html
@@ -81,40 +81,51 @@
 
       <p>
         Hi, my name is Qihong Lu (吕其鸿).
-        I'm a PhD candidate with
-        <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a>
-        and
-        <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
-        at Princeton.
-        I use neural network models to understand how episodic memory can be most effectively deployed in the service of event processing.
-        Here's my <a href="docs/CV_QL.pdf">CV</a>.
+        I will move to Columbia University as a postdoc fellow this Fall to work on computational models of context and episodic memory!
+        <!-- <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a> at Princeton.
+        I use neural network models to understand how episodic memory and context representations can be most effectively deployed in the service of event processing. -->
+        <br>
+        <b>Here's my <a href="docs/CV_QL.pdf">CV</a></b>.
 
         <br><br>
+        I received my PhD in Cognitive Psychology at Princeton University,
+        where I worked with
+        <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a>
+        and
+        <a href="https://pni.princeton.edu/faculty/uri-hasson">Uri Hasson</a>.
         I did my undergrad in Mathematics and Psychology at the University of Wisconsin-Madison.
         I originally came from Shanghai, China.
 
-        <!-- <br><br><br>
-        News:
-        <br>
-        [2022/05] I’m currently working on neuromotor interfaces
-        as a research scientist intern at the
-        <a href='https://about.fb.com/news/2021/03/inside-facebook-reality-labs-wrist-based-interaction-for-the-next-computing-platform/'>
-          CTRL labs</a>
-        @ Facebook Reality Labs!
-        <br>
-        <br>
-        [2022/04] Super excited to announce that our recent work is officially out in eLife:
-        a neural network model of when to retrieve and encode episodic memories to predict upcoming events.
-        Here's the <a href='https://elifesciences.org/articles/74445'>paper</a> and the <a href='https://github.com/qihongl/learn-hippo'>repo</a>! -->
-
-        <!-- <br><br>
-        1. I 'm helping with
-        <a href='https://academy.neuromatch.io/'>Neuromatch Academy</a> to teach deep learning!
-
         <br><br>
-        *. I'm organizing the weekly
-        <a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a> at Princeton,
-        feel free to contact me if you would like to give a talk!
+        News:
+        <ul>
+          <li>
+          [2023/06]
+          I received the <a href = "https://zuckermaninstitute.columbia.edu/zuckerman-institute-postdoctoral-fellows-program">
+            Alan Kanzer Zuckerman Institute Postdoctoral Fellowship</a>
+            and I will move to the Center for Theoretical Neuroscience, Zuckerman Mind Brain Behavior Institute, Columbia University this fall.
+          </li>
+
+          <li>
+          [2023/05]
+          I will travel to <a href="https://2023.ccneuro.org/">CCN 2023</a> at Oxford UK to present our recent works. Feel free to ping me if you'd like to chat!
+          </li>
+
+          <li>
+          [2022/05-09]
+          I worked on neuromotor interfaces as a research scientist intern at the
+          <a href='https://about.fb.com/news/2021/03/inside-facebook-reality-labs-wrist-based-interaction-for-the-next-computing-platform/'>
+            CTRL labs</a>
+          @ Reality Labs, Meta!
+          </li>
+
+          <li>
+          [2022/04]
+          Super excited to announce that our recent work is officially out in eLife:
+          a neural network model of <b>when</b> to retrieve and encode episodic memories.
+          Here's the <a href='https://elifesciences.org/articles/74445'>paper</a> and the <a href='https://github.com/qihongl/learn-hippo'>repo</a>!
+          </li>
+        </ul>
 
     </section>
 
