--- a/teaching.html
+++ b/teaching.html
@@ -72,7 +72,11 @@
 
 
       <p>
-        <h3>Summer 2021, Deep learning, <a href="https://academy.neuromatch.io/">Neuromatch Academy</a></h3>
+        <h3>
+          Deep learning
+          <br>
+          Summer 2021 @ <a href="https://academy.neuromatch.io/">Neuromatch Academy</a>
+        </h3>
 
         <ul>
           <li>
@@ -86,13 +90,17 @@
           </li>
         </ul>
 
-        <br><br>
+        <br>
       </p>
 
       <hr>
 
       <p>
-        <h3>Fall 2018 & Spring 2021, ELE | NEU | PSY 480: fMRI Decoding: Reading Minds Using Brain Scans</h3>
+        <h3>
+          ELE | NEU | PSY 480: fMRI Decoding: Reading Minds Using Brain Scans
+          <br>
+          Fall 2018 & Spring 2021 @ Princeton University
+        </h3>
         &emsp;
         <a href="https://registrar.princeton.edu/course-offerings/course-details?term=1214&courseid=011565">offcial course description</a>
         |
@@ -135,9 +143,34 @@
       <br>
       <hr>
 
+      <p>
+        <h3>
+          NEU 350 Laboratory in Principles of Neuroscience (2-week fMRI data analysis lab)
+          <br>
+          2018 Spring & 2020 Spring @ Princeton University
+        </h3>
+
+        Slides:
+        <ul>
+          <li>
+            <a href = "https://docs.google.com/presentation/d/1KFo6xIAUwyaF_jdU1a4yz8xwOZXNyh0Vlfoi-i2REZk/edit?usp=sharing">Intro to General Linear Model (GLM)</a>
+          </li>
+          <li>
+            <a href = "https://docs.google.com/presentation/d/1jueNOzXMac_ghrsjVzpwg3x9rQJgu84YfHYYXru9oJM/edit?usp=sharing">Intro to fMRI decoding, classification</a>
+          </li>
+        </ul>
+      </p>
+
+
+      <br>
+      <hr>
 
       <p>
-        <h3>Spring 2019, NEU | PSY 330: Computational Modeling of Psychological Function</h3>
+        <h3>
+          NEU | PSY 330: Computational Modeling of Psychological Function
+          <br>
+          Spring 2019 @ Princeton University
+        </h3>
         &emsp;
         <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=005628&term=1194">offcial course description</a>
         |
