--- a/index.html
+++ b/index.html
@@ -100,15 +100,17 @@
         News:
         <ul>
           <li>
-          [2023/06]
-          I received the <a href = "https://zuckermaninstitute.columbia.edu/zuckerman-institute-postdoctoral-fellows-program">
-            Alan Kanzer Zuckerman Institute Postdoctoral Fellowship</a>
-            and I will move to the Center for Theoretical Neuroscience, Zuckerman Mind Brain Behavior Institute, Columbia University this fall.
+          [2023/09]
+          I will travel to <a href="https://2023.ccneuro.org/">CCN 2023</a> at Oxford UK to present
+          our recent works (<a href="https://2023.ccneuro.org/view_paper.php?PaperNum=1339">this one</a> and <a href="https://2023.ccneuro.org/view_paper.php?PaperNum=1340">this one</a>).
+          Feel free to ping me if you'd like to chat!
           </li>
 
           <li>
-          [2023/05]
-          I will travel to <a href="https://2023.ccneuro.org/">CCN 2023</a> at Oxford UK to present our recent works. Feel free to ping me if you'd like to chat!
+          [2023/06]
+          I received the <a href = "https://zuckermaninstitute.columbia.edu/zuckerman-institute-postdoctoral-fellows-program">
+            Alan Kanzer Zuckerman Institute Postdoctoral Fellowship</a>
+            from the Center for Theoretical Neuroscience, Zuckerman Mind Brain Behavior Institute, Columbia University.
           </li>
 
           <li>
