--- a/research.html
+++ b/research.html
@@ -329,9 +329,8 @@
             <br>
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
-            poster, paper
-            <!-- <a href="https://qihongl.github.io/docs/CCN19_poster_HCModel.pdf">poster</a>,
-            <a href="https://ccneuro.org/2019/Papers/ViewPapers.asp?PaperNum=1072">paper</a> -->
+            <a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/CCN23_poster_LCNet.pdf">poster</a>,
+            <a href="https://2023.ccneuro.org/view_paper.php?PaperNum=1339">paper</a>
           </p>
           <br>
 
@@ -342,9 +341,8 @@
             <br>
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
-            poster, paper
-            <!-- <a href="https://qihongl.github.io/docs/CCN19_poster_HCModel.pdf">poster</a>,
-            <a href="https://ccneuro.org/2019/Papers/ViewPapers.asp?PaperNum=1072">paper</a> -->
+            <a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/CCN23_Poster_Dong.pdf">poster</a>,
+            <a href="https://2023.ccneuro.org/view_paper.php?PaperNum=1340">paper</a>
           </p>
           <br>
 
