--- a/teaching.html
+++ b/teaching.html
@@ -43,8 +43,9 @@
       <p class="view"><h4><a href="index.html">Home</a></h4></p>
       <p class="view"><h4><a href="research.html">Research</a></h4></p>
       <p class="view"><h4>Teaching</h4></p>
-      <p class="view"><a href="photo.html"><h4>Photography</a></h4></p>
+      <p class="view"><a href="photo.html" target="_blank"><h4>Photography</h4></a></p>
       <p class="view"><h4><a href="contact.html">Contact</a></h4>
+      <p class="view"> <a href="docs/CV_QL.pdf" target="_blank">CV</a> </p>
       </p>
       <br><br>
 
@@ -140,7 +141,7 @@
       </p>
 
 
-      <br>
+      <!-- <br>
       <hr>
 
       <p>
@@ -159,7 +160,7 @@
             <a href = "https://docs.google.com/presentation/d/1jueNOzXMac_ghrsjVzpwg3x9rQJgu84YfHYYXru9oJM/edit?usp=sharing">Intro to fMRI decoding, classification</a>
           </li>
         </ul>
-      </p>
+      </p> -->
 
 
       <br>
