--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
       <p class="view"><h4>Home</h4></p>
       <p class="view"><a href="research.html"><h4>Research</h4></a></p>
       <p class="view"><h4><a href="teaching.html">Teaching</h4></a></p>
-      <p class="view"><a href="photo.html"><h4>Photography</h4></a></p>
+      <p class="view"><a href="photo.html" target="_blank"><h4>Photography</h4></a></p>
       <p class="view"><a href="contact.html"><h4>Contact</h4></a></p>
+      <p class="view"> <a href="docs/CV_QL.pdf" target="_blank">CV</a> </p>
+
       <br><br>
 
       <p class="view">
@@ -85,7 +87,7 @@
         <!-- <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a> at Princeton.
         I use neural network models to understand how episodic memory and context representations can be most effectively deployed in the service of event processing. -->
         <br>
-        <b>Here's my <a href="docs/CV_QL.pdf">CV</a></b>.
+        Here's my <a href="docs/CV_QL.pdf" target="_blank">CV</a>.
 
         <br><br>
         I received my PhD in Cognitive Psychology at Princeton University,
