--- a/research.html
+++ b/research.html
@@ -43,8 +43,9 @@
       <p class="view"><h4><a href="index.html">Home</a></h4></p>
       <p class="view"><h4>Research</h4></p>
       <p class="view"><h4><a href="teaching.html">Teaching</h4></a></p>
-      <p class="view"><a href="photo.html"><h4>Photography</h4></a></p>
+      <p class="view"><a href="photo.html" target="_blank"><h4>Photography</h4></a></p>
       <p class="view"><a href="contact.html"><h4>Contact</h4></a></p>
+      <p class="view"> <a href="docs/CV_QL.pdf" target="_blank">CV</a> </p>
       <br><br>
 
       <p class="view">
