--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
       <p class="view"><a href="research.html"><h4>Research</h4></a></p>
       <p class="view"><h4><a href="teaching.html">Teaching</h4></a></p>
       <p class="view"><a href="photo.html" target="_blank"><h4>Photography</h4></a></p>
-      <p class="view"><a href="contact.html"><h4>Contact</h4></a></p>
       <p class="view"> <a href="docs/CV_QL.pdf" target="_blank">CV</a> </p>
 
       <br><br>
@@ -110,8 +109,7 @@
 
           <li>
           [2023/06]
-          I received the <a href = "https://zuckermaninstitute.columbia.edu/zuckerman-institute-postdoctoral-fellows-program">
-            Alan Kanzer Zuckerman Institute Postdoctoral Fellowship</a>
+          I received the <a href = "https://zuckermaninstitute.columbia.edu/zuckerman-institute-postdoctoral-fellows-program"> Alan Kanzer Postdoctoral Fellowship</a>
             from the Center for Theoretical Neuroscience, Zuckerman Mind Brain Behavior Institute, Columbia University.
           </li>
 
