--- a/research.html
+++ b/research.html
@@ -213,6 +213,37 @@
         <div id="talk" class="tabcontent"><br>
 
           <p>
+            <b>Episodic memory can contribute to the acquisition of structured task representation.</b>
+            <br>
+            Lu, Q., & Norman, K. A. (2023).
+            <br>
+            Mattar lab. New York University. PI: Marcelo Mattar
+            <br>
+          </p>
+          <br>
+
+          <p>
+            <b>The influence of event structure on optimal memory policies </b>
+            <br>
+            Lu, Q., Hasson, U., & Norman, K. A. (2023).
+            <br>
+            Department of Psychology. The University of Hong Kong. Host PI: Xiaoqing Hu
+            <br>
+          </p>
+          <br>
+
+          <p>
+            <b>The influence of event structure on optimal memory policies </b>
+            <br>
+            Lu, Q., Hasson, U., & Norman, K. A. (2023).
+            <br>
+            Shohamy Lab. Columbia University. PI: Daphna Shohamy
+            <br>
+          </p>
+          <br>
+
+
+          <p>
             <b>When to retrieve and encode episodic memories: a neural network model of hippocampal-cortical interaction. </b>
             <br>
             Lu, Q., Hasson, U., & Norman, K. A. (2022).
