--- a/index.html
+++ b/index.html
@@ -82,19 +82,22 @@
 
       <p>
         Hi, my name is Qihong Lu (吕其鸿).
-        I will move to Columbia University as a postdoc fellow this Fall to work on computational models of context and episodic memory!
-        <!-- <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a> at Princeton.
-        I use neural network models to understand how episodic memory and context representations can be most effectively deployed in the service of event processing. -->
-        <br>
-        Here's my <a href="docs/CV_QL.pdf" target="_blank">CV</a>.
+        I'm interested in computational models of episodic memory and context.
+        I'm currently an <a href="https://zuckermaninstitute.columbia.edu/alan-kanzer-postdoctoral-fellowship-program">Alan Kanzer Postdoctoral Fellow</a>
+        at Columbia University.
+        I am affiliated with
+        <a href="https://ctn.zuckermaninstitute.columbia.edu/">Center for Theoretical Neuroscience</a>
+        and
+        <a href="https://zuckermaninstitute.columbia.edu/">Zuckerman Mind Brain Behavior Institute</a>.
 
         <br><br>
         I received my PhD in Cognitive Psychology at Princeton University,
-        where I worked with
-        <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a>
+        where I worked on neural network models of optimal policies for episodic memory with
+        <a href="https://psychology.princeton.edu/people/kenneth-norman">Ken Norman</a>
         and
-        <a href="https://pni.princeton.edu/faculty/uri-hasson">Uri Hasson</a>.
-        I did my undergrad in Mathematics and Psychology at the University of Wisconsin-Madison.
+        <a href="https://psychology.princeton.edu/people/uri-hasson">Uri Hasson</a>.
+        I received my B.S. in Mathematics and Psychology at the University of Wisconsin-Madison,
+        where I worked with <a href="https://psych.wisc.edu/staff/rogers-timothy-t/">Tim Rogers</a>.
         I originally came from Shanghai, China.
 
         <br><br>
@@ -105,12 +108,6 @@
           I will travel to <a href="https://2023.ccneuro.org/">CCN 2023</a> at Oxford UK to present
           our recent works (<a href="https://2023.ccneuro.org/view_paper.php?PaperNum=1339">this one</a> and <a href="https://2023.ccneuro.org/view_paper.php?PaperNum=1340">this one</a>).
           Feel free to ping me if you'd like to chat!
-          </li>
-
-          <li>
-          [2023/06]
-          I received the <a href = "https://zuckermaninstitute.columbia.edu/zuckerman-institute-postdoctoral-fellows-program"> Alan Kanzer Postdoctoral Fellowship</a>
-            from the Center for Theoretical Neuroscience, Zuckerman Mind Brain Behavior Institute, Columbia University.
           </li>
 
           <li>
