--- a/research.html
+++ b/research.html
@@ -98,13 +98,25 @@
 
         </ul>
 
-
         <div id="paper" class="tabcontent" style="display:block"><br>
+
+          <p>
+            <b>Toward a More Biologically Plausible Neural Network Model of Latent Cause Inference</b>
+            <br>
+            <b>Lu, Q.</b>, Nguyen, T., Zhang Q., Hasson, U., Griffiths, T. L., Zacks, J. M., Gershman, S. J., Norman, K. A. (2023).
+            <br>
+            arXiv / under review
+            <br>
+            <a href="https://arxiv.org/abs/2312.08519">paper</a>,
+            <a href="https://github.com/qihongl/LCNet">code</a>
+            <br>
+          </p>
+          <br>
 
           <p>
             <b>A Neural Network Model of When to Retrieve and Encode Episodic Memories</b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2022).
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2022).
             <br>
             eLife
             <br>
@@ -119,7 +131,7 @@
           <p>
             <b>BrainIAK: Brain Imaging and Analysis Kit</b>
             <br>
-            Kumar, M., Anderson, M.J., Antony, J.W., Baldassano C., Brooks, P.P., Cai, M.B., Chen, P.H.C., Ellis, C.T., Henselman-Petrusek, G., Huberdeau, D., Hutchinson, J.B., Li, P.Y., Lu, Q., Manning, J.R., Mennen, A.C., Nastase, S.A., Hugo, R.,
+            Kumar, M., Anderson, M.J., Antony, J.W., Baldassano C., Brooks, P.P., Cai, M.B., Chen, P.H.C., Ellis, C.T., Henselman-Petrusek, G., Huberdeau, D., Hutchinson, J.B., Li, P.Y., <b>Lu, Q.</b>, Manning, J.R., Mennen, A.C., Nastase, S.A., Hugo, R.,
             Schapiro, A.C., Schuck, N.W., Shvartsman, M., Sundaram, N., Suo, D., Turek, J.S., Vo, V.A., Wallace, G., Wang, Y., Zhang, H., Zhu, X., Capota, M., Cohen, J.D., Hasson, U., Li, K., Ramadge, P.J., Turk-Browne, N.B., Willke, T.L. & Norman,
             K.A. (2022)
             <br>
@@ -134,7 +146,7 @@
           <p>
             <b>Learning to Perform Role-Filler Binding with Schematic Knowledge</b>
             <br>
-            Chen, C., Lu, Q., Beukers, A., Baldassano, C., Norman, K. A. (2021)
+            Chen, C., <b>Lu, Q.</b>, Beukers, A., Baldassano, C., Norman, K. A. (2021)
             <br>
             PeerJ
             <br>
@@ -147,7 +159,7 @@
 
             <b>Evidence for a deep, distributed and dynamic code for animacy in human ventral anterior temporal cortex</b>
             <br>
-            Rogers, T. T., Cox, C., Lu, Q., Shimotake, A., Kikuch, T., Kunieda, T., Miyamoto, S., Takahashi, R., Ikeda, A., Matsumoto, R., Lambon Ralph, M. A. (2021)
+            Rogers, T. T., Cox, C., <b>Lu, Q.</b>, Shimotake, A., Kikuch, T., Kunieda, T., Miyamoto, S., Takahashi, R., Ikeda, A., Matsumoto, R., Lambon Ralph, M. A. (2021)
             <br>
             eLife
             <br>
@@ -160,7 +172,7 @@
           <p>
             <b>Learning to use episodic memory for event prediction</b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2020).
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2020).
             <br>
             bioRxiv
             <br>
@@ -173,7 +185,7 @@
           <p>
             <b>BrainIAK tutorials: User-friendly learning materials for advanced fMRI analysis</b>
             <br>
-            Kumar, M., Ellis, C. T., Lu, Q., Zhang, H., Capotă, M., Willke, T. L., Ramadge, P. J., Turk-Browne, N. B., & Norman, K. A. (2020).
+            Kumar, M., Ellis, C. T., <b>Lu, Q.</b>, Zhang, H., Capotă, M., Willke, T. L., Ramadge, P. J., Turk-Browne, N. B., & Norman, K. A. (2020).
             <br>
             PLoS Computational Biology
             <br>
@@ -187,7 +199,7 @@
           <p>
             <b>Shared representational geometry across neural networks</b>
             <br>
-            Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U. (2018)
+            <b>Lu, Q.</b>, Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U. (2018)
             <br>
             Workshop on Integration of Deep Learning Theories, NeurIPS.
             <br>
@@ -201,7 +213,7 @@
           <p>
             <b>A Parallel-Distributed Processing approach to mathematical cognition</b>
             <br>
-            McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016).
+            McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & <b>Lu, Q.</b> (2016).
             <br>
             <a href="http://stanford.edu/~jlmcc/papers/McCEtAl16MsPDPApproachToMathematicalCognition.pdf">paper</a>
           </p>
@@ -215,7 +227,7 @@
           <p>
             <b>Episodic memory can contribute to the acquisition of structured task representation.</b>
             <br>
-            Lu, Q., & Norman, K. A. (2023).
+            <b>Lu, Q.</b>, & Norman, K. A. (2023).
             <br>
             Mattar lab. New York University. PI: Marcelo Mattar
             <br>
@@ -225,7 +237,7 @@
           <p>
             <b>The influence of event structure on optimal memory policies </b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2023).
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2023).
             <br>
             Department of Psychology. The University of Hong Kong. Host PI: Xiaoqing Hu
             <br>
@@ -235,7 +247,7 @@
           <p>
             <b>The influence of event structure on optimal memory policies </b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2023).
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2023).
             <br>
             Shohamy Lab. Columbia University. PI: Daphna Shohamy
             <br>
@@ -246,7 +258,7 @@
           <p>
             <b>When to retrieve and encode episodic memories: a neural network model of hippocampal-cortical interaction. </b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2022).
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2022).
             <br>
             Penn Computational Cognitive Neuroscience Lab. University of Pennsylvania. PI: Anna Schapiro
             <br>
@@ -256,7 +268,7 @@
           <p>
             <b>When to retrieve and encode episodic memories: a neural network model of hippocampal-cortical interaction. </b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2022).
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2022).
             <br>
             Mila Neural-AI Reading Group.
             <br>
@@ -266,7 +278,7 @@
           <p>
             <b>Why should episodic retrieval and encoding occur selectively. </b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2021).
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2021).
             <br>
             Contextual Dynamics Lab. Dartmouth College. PI: Jeremy Manning.
             <br>
@@ -276,7 +288,7 @@
           <p>
             <b>Why should episodic retrieval and encoding occur selectively. </b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2021).
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2021).
             <br>
             Honey lab & Chen lab. Johns Hopkins University. PI: Janice Chen & Chris Honey.
             <br>
@@ -286,7 +298,7 @@
           <p>
             <b>When to recall and encode episodic memory. </b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2021).
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2021).
             <br>
             Google DeepMind.
             <br>
@@ -296,7 +308,7 @@
           <p>
             <b>When to recall and encode episodic memory. </b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2021).
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2021).
             <br>
             Oxford Neurotheory Lab, University of Oxford. PI: Andrew Saxe.
             <br>
@@ -306,7 +318,7 @@
           <p>
             <b>Learning to Perform Role-Filler Binding with Schematic Knowledge</b>
             <br>
-            Chen, C., Lu, Q., Beukers, A., Baldassano, C., Norman, K. A. (2021)
+            Chen, C., <b>Lu, Q.</b>, Beukers, A., Baldassano, C., Norman, K. A. (2021)
             <br>
             Oxford Neurotheory Lab, University of Oxford. PI: Andrew Saxe.
             <br>
@@ -316,7 +328,7 @@
           <p>
             <b>Modeling when episodic encoding should take place to support event prediction</b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2021)
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2021)
             <br>
             Cognitive Neuroscience Society (CNS) Annual meeting
             <br>
@@ -330,7 +342,7 @@
           <p>
             <b>Learning to use episodic memory for event prediction</b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2020)
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2020)
             <br>
             Context and Episodic Memory Symposium (CEMS)
             <br>
@@ -342,7 +354,7 @@
           <p>
             <b>Learning when to recall</b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2020)
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2020)
             <br>
             Neuromatch
             <br>
@@ -356,7 +368,7 @@
           <p>
             <b>Toward a More Neurally Plausible Neural Network Model of Latent Cause Inference. </b>
             <br>
-            Lu, Q., Nguyen, T., Hasson, U., Griffiths, T. L., Zacks, J. M., Gershman, S. J., Norman, K. A. (2023)
+            <b>Lu, Q.</b>, Nguyen, T., Hasson, U., Griffiths, T. L., Zacks, J. M., Gershman, S. J., Norman, K. A. (2023)
             <br>
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
@@ -368,7 +380,7 @@
           <p>
             <b>Strategic Control of Episodic Memory Through Post-Gating.</b>
             <br>
-            Dong, C., Lu, Q., Norman, K. A. (2023)
+            Dong, C., <b>Lu, Q.</b>, Norman, K. A. (2023)
             <br>
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
@@ -380,7 +392,7 @@
           <p>
             <b>Optimal timing for episodic retrieval and encoding for event understanding</b>
             <br>
-            Lu, Q., Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
+            <b>Lu, Q.</b>, Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
             <br>
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
@@ -393,7 +405,7 @@
           <p>
             <b>Patience is a virtue: A normative account of why waiting to encode and retrieve memories benefits event understanding</b>
             <br>
-            Lu, Q., Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
+            <b>Lu, Q.</b>, Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
             <br>
             The Context and Episodic Memory Symposium (CEMS)
             <br>
@@ -404,7 +416,7 @@
           <p>
             <b>BrainIAK tutorials: user-friendly learning materials for advanced fMRI analysis</b>
             <br>
-            Kumar, M., Ellis, C.T., Lu, Q., Zhang, H., Capota, M., Willke, T.L., Ramadge, P.J., Turk-Browne, N.B., & Norman, K.A. (2019)
+            Kumar, M., Ellis, C.T., <b>Lu, Q.</b>, Zhang, H., Capota, M., Willke, T.L., Ramadge, P.J., Turk-Browne, N.B., & Norman, K.A. (2019)
             <br>
             Society for neuroscience conference (SfN)
             <br>
@@ -418,7 +430,7 @@
           <p>
             <b>Shared representational geometry across neural networks</b>
             <br>
-            Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U. (2018)
+            <b>Lu, Q.</b>, Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U. (2018)
             <br>
             Workshop on Integration of Deep Learning Theories, NeurIPS.
             <br>
@@ -432,7 +444,7 @@
           <p>
             <b>Modeling hippocampal-cortical dynamics during event processing</b>
             <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2018)
+            <b>Lu, Q.</b>, Hasson, U., & Norman, K. A. (2018)
             <br>
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
@@ -444,7 +456,7 @@
           <p>
             <b>Generalized schema learning by neural networks</b>
             <br>
-            Chen, C., Lu, Q., Beukers, A., Baldassano, C., & Norman, K. A. (2018)
+            Chen, C., <b>Lu, Q.</b>, Beukers, A., Baldassano, C., & Norman, K. A. (2018)
             <br>
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
@@ -456,7 +468,7 @@
           <p>
             <b>Performance optimization is insufficient for building accurate models for neural representation</b>
             <br>
-            Yu, J., Lu, Q., Hasson, U., Norman, K. A., & Pillow, J. W. (2018)
+            Yu, J., <b>Lu, Q.</b>, Hasson, U., Norman, K. A., & Pillow, J. W. (2018)
             <br>
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
@@ -468,7 +480,7 @@
           <!--                         <p>
                             <b>Measuring representational similarity across neural networks</b>
                             <br>
-                            Lu, Q., Ramadge, P., Norman, K. A., & Hasson, U. (2018)
+                            <b>Lu, Q.</b>, Ramadge, P., Norman, K. A., & Hasson, U. (2018)
                             <br>
                             The Annual Meeting of the Cognitive Science Society (CogSci)
                             <br>
@@ -479,7 +491,7 @@
           <p>
             <b>An interactive model accounts for ultra-rapid superordinate classification and basic-level advantage</b>
             <br>
-            Lu, Q., & Rogers, T. T. (2016)
+            <b>Lu, Q.</b>, & Rogers, T. T. (2016)
             <br>
             The Annual Meeting of the Cognitive Science Society (CogSci)
             <br>
@@ -491,7 +503,7 @@
           <p>
             <b>Teaching a neural network to count: reinforcement learning with "social scaffolding"</b>
             <br>
-            Lu, Q., & McClelland, J. L. (2016)
+            <b>Lu, Q.</b>, & McClelland, J. L. (2016)
             <br>
             The Neural Computation and Psychology Workshop (NCPW)
             <br>
@@ -503,7 +515,7 @@
           <p>
             <b>Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis</b>
             <br>
-            Cox, C. R., Lu, Q., & Rogers, T. T. (2015)
+            Cox, C. R., <b>Lu, Q.</b>, & Rogers, T. T. (2015)
             <br>
             The Cognitive Neuroscience Society conference (CNS)
             <br>
