--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         I am affiliated with
         <a href="https://ctn.zuckermaninstitute.columbia.edu/">Center for Theoretical Neuroscience</a>
         and
-        <a href="https://zuckermaninstitute.columbia.edu/">Zuckerman Mind Brain Behavior Institute</a>.
+        <a href="https://zuckermaninstitute.columbia.edu/">The Mortimer B. Zuckerman Mind Brain Behavior Institute</a>.
 
         <br><br>
         I received my PhD in Cognitive Psychology at Princeton University,
@@ -103,6 +103,13 @@
         <br><br>
         News:
         <ul>
+          <li>
+          [2023/12]
+          I’m pleased to announce our preprint –
+          <a href='https://arxiv.org/abs/2312.08519 '>Toward a More Biologically Plausible Neural Network Model of Latent Cause Inference</a>.
+          Feel free to reach out if you have any comment/suggestion!
+          </li>
+
           <li>
           [2023/09]
           I will travel to <a href="https://2023.ccneuro.org/">CCN 2023</a> at Oxford UK to present
