--- a/research.html
+++ b/research.html
@@ -365,6 +365,7 @@
 
         <div id="poster" class="tabcontent"><br>
 
+
           <p>
             <b>Toward a More Neurally Plausible Neural Network Model of Latent Cause Inference. </b>
             <br>
@@ -373,7 +374,7 @@
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
             <a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/CCN23_poster_LCNet.pdf">poster</a>,
-            <a href="https://2023.ccneuro.org/view_paper.php?PaperNum=1339">paper</a>
+            <a href="https://2023.ccneuro.org/view_paperbae9.html?PaperNum=1339">paper</a>
           </p>
           <br>
 
@@ -385,7 +386,7 @@
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
             <a href="https://github.com/qihongl/qihongl.github.io/blob/master/docs/CCN23_Poster_Dong.pdf">poster</a>,
-            <a href="https://2023.ccneuro.org/view_paper.php?PaperNum=1340">paper</a>
+            <a href="https://2023.ccneuro.org/view_paper5960.html?PaperNum=1340">paper</a>
           </p>
           <br>
 
@@ -397,7 +398,7 @@
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
             <a href="https://qihongl.github.io/docs/CCN19_poster_HCModel.pdf">poster</a>,
-            <a href="https://ccneuro.org/2019/Papers/ViewPapers.asp?PaperNum=1072">paper</a>
+            <a href="https://2019.ccneuro.website/Papers/ViewPapers3b89.html?PaperNum=1072">paper</a>
           </p>
           <br>
 
@@ -449,7 +450,7 @@
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
             <a href="https://qihongl.github.io/docs/CCN18_poster_HCModel.pdf">poster</a>,
-            <a href="https://ccneuro.org/2018/Papers/ViewPapers.asp?PaperNum=1048">paper</a>
+            <a href="https://2018.ccneuro.website/Papers/ViewPapers8e56.html?PaperNum=1048">paper</a>
           </p>
           <br>
 
@@ -461,7 +462,7 @@
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
             <a href="https://qihongl.github.io/docs/CCN18_poster_binding.pdf">poster</a>,
-            <a href="https://ccneuro.org/2018/Papers/ViewPapers.asp?PaperNum=1036">paper</a>
+            <a href="https://2018.ccneuro.website/Papers/ViewPapers05d0.html?PaperNum=1036">paper</a>
           </p>
           <br>
 
@@ -473,20 +474,10 @@
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
             <a href="https://qihongl.github.io/docs/CNN18_poster_perfopt.pdf">poster</a>,
-            <a href="https://ccneuro.org/2018/Papers/ViewPapers.asp?PaperNum=1148">paper</a>
+            <a href="https://2018.ccneuro.website/Papers/ViewPapers19a0.html?PaperNum=1148">paper</a>
           </p>
           <br>
 
-          <!--                         <p>
-                            <b>Measuring representational similarity across neural networks</b>
-                            <br>
-                            <b>Lu, Q.</b>, Ramadge, P., Norman, K. A., & Hasson, U. (2018)
-                            <br>
-                            The Annual Meeting of the Cognitive Science Society (CogSci)
-                            <br>
-                            <a href="https://qihongl.github.io/docs/cogsci2018_poster.pdf">poster</a>
-                        </p>
-                        <br> -->
 
           <p>
             <b>An interactive model accounts for ultra-rapid superordinate classification and basic-level advantage</b>
