--- a/research.html
+++ b/research.html
@@ -101,7 +101,7 @@
         <div id="paper" class="tabcontent" style="display:block"><br>
 
           <p>
-            <b>Toward a More Biologically Plausible Neural Network Model of Latent Cause Inference</b>
+            <b>Reconciling Shared versus Context-Specific Information in a Neural Network Model of Latent Causes</b>
             <br>
             <b>Lu, Q.</b>, Nguyen, T., Zhang Q., Hasson, U., Griffiths, T. L., Zacks, J. M., Gershman, S. J., Norman, K. A. (2023).
             <br>
