--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@
       <p>
         Hi, my name is Qihong Lu (吕其鸿).
         I'm interested in computational models of episodic memory and context.
-        I'm currently an <a href="https://zuckermaninstitute.columbia.edu/alan-kanzer-postdoctoral-fellowship-program">Alan Kanzer Postdoctoral Fellow</a>
-        at Columbia University.
+        I'm currently an
+        <a href="https://zuckermaninstitute.columbia.edu/alan-kanzer-postdoctoral-fellowship-program">Alan Kanzer Postdoctoral Fellow</a>
+        at Columbia University, working with
+        <a href="https://zuckermaninstitute.columbia.edu/daphna-shohamy-phd">Daphna Shohamy</a>, and
+        <a href="https://zuckermaninstitute.columbia.edu/stefano-fusi-phd">Stefano Fusi</a>.
         I am affiliated with
         <a href="https://ctn.zuckermaninstitute.columbia.edu/">Center for Theoretical Neuroscience</a>
         and
@@ -106,7 +109,7 @@
           <li>
           [2023/12]
           I’m pleased to announce our preprint –
-          <a href='https://arxiv.org/abs/2312.08519 '>Toward a More Biologically Plausible Neural Network Model of Latent Cause Inference</a>.
+          <a href='https://arxiv.org/abs/2312.08519 '>Reconciling Shared versus Context-Specific Information in a Neural Network Model of Latent Causes</a>.
           Feel free to reach out if you have any comment/suggestion!
           </li>
 
