--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       <p>
         Hi, my name is Qihong Lu (吕其鸿).
-        I'm interested in computational models of episodic memory and context.
+        I'm interested in computational models of episodic memory.
         I'm currently an
         <a href="https://zuckermaninstitute.columbia.edu/alan-kanzer-postdoctoral-fellowship-program">Alan Kanzer Postdoctoral Fellow</a>
         at Columbia University, working with
@@ -107,6 +107,12 @@
         News:
         <ul>
           <li>
+          [2024/05]
+          I will give a talk at the <a href='https://memory.psych.upenn.edu/CEMS_2024'>CEMS 2024</a> at UPenn, Philadelphia!
+          Feel free to ping me if you'd like to chat!
+          </li>
+
+          <li>
           [2023/12]
           I’m pleased to announce our preprint –
           <a href='https://arxiv.org/abs/2312.08519 '>Reconciling Shared versus Context-Specific Information in a Neural Network Model of Latent Causes</a>.
@@ -117,7 +123,13 @@
           [2023/09]
           I will travel to <a href="https://2023.ccneuro.org/">CCN 2023</a> at Oxford UK to present
           our recent works (<a href="https://2023.ccneuro.org/view_paper.php?PaperNum=1339">this one</a> and <a href="https://2023.ccneuro.org/view_paper.php?PaperNum=1340">this one</a>).
-          Feel free to ping me if you'd like to chat!
+          </li>
+
+          <li>
+          [2023/06]
+          I received the
+          <a href="https://zuckermaninstitute.columbia.edu/alan-kanzer-postdoctoral-fellowship-program">Alan Kanzer Postdoctoral Fellowship</a>
+          from Columbia University!
           </li>
 
           <li>
@@ -131,8 +143,8 @@
           <li>
           [2022/04]
           Super excited to announce that our recent work is officially out in eLife:
-          a neural network model of <b>when</b> to retrieve and encode episodic memories.
-          Here's the <a href='https://elifesciences.org/articles/74445'>paper</a> and the <a href='https://github.com/qihongl/learn-hippo'>repo</a>!
+          <a href='https://elifesciences.org/articles/74445'>A neural network model of <b>when</b> to retrieve and encode episodic memories.</a>
+          And here's the <a href='https://github.com/qihongl/learn-hippo'>repo</a>!
           </li>
         </ul>
 
