--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <li>
           [2023/09]
           I will travel to <a href="https://2023.ccneuro.org/">CCN 2023</a> at Oxford UK to present
-          our recent works (<a href="https://2023.ccneuro.org/view_paper.php?PaperNum=1339">this one</a> and <a href="https://2023.ccneuro.org/view_paper.php?PaperNum=1340">this one</a>).
+          our recent works (<a href="https://2023.ccneuro.org/view_paperbae9.html?PaperNum=1339">this one</a> and <a href="https://2023.ccneuro.org/view_paper5960.html?PaperNum=1340">this one</a>).
           </li>
 
           <li>
