--- a/index.html
+++ b/index.html
@@ -106,17 +106,23 @@
         <br><br>
         News:
         <ul>
+
           <li>
           [2024/05]
-          I will give a talk at the <a href='https://memory.psych.upenn.edu/CEMS_2024'>CEMS 2024</a> at UPenn, Philadelphia!
-          Feel free to ping me if you'd like to chat!
+          Our recent work,
+          <a href='https://www.biorxiv.org/content/10.1101/2024.05.06.592749v1'>Episodic memory supports the acquisition of structured task representations</a>,
+          got accepted as a talk by
+          <a href='https://memory.psych.upenn.edu/CEMS_2024'>CEMS 2024</a>
+          and
+          <a href='https://cognitivesciencesociety.org/cogsci-2024/'>CogSci 2024</a>!
+          Feel free to reach out if you have any question/comment/suggestion!
           </li>
 
           <li>
           [2023/12]
           I’m pleased to announce our preprint –
           <a href='https://arxiv.org/abs/2312.08519 '>Reconciling Shared versus Context-Specific Information in a Neural Network Model of Latent Causes</a>.
-          Feel free to reach out if you have any comment/suggestion!
+          Feel free to reach out if you have any question/comment/suggestion!
           </li>
 
           <li>
