--- a/research.html
+++ b/research.html
@@ -101,11 +101,23 @@
         <div id="paper" class="tabcontent" style="display:block"><br>
 
           <p>
+            <b>Episodic Memory Supports the Acquisition of Structured Task Representations</b>
+            <br>
+            <b>Lu, Q.</b>, Hummos, A., Norman, K. A. (2024).
+            <br>
+            bioRxiv
+            <br>
+            <a href="https://www.biorxiv.org/content/10.1101/2024.05.06.592749v1">paper</a>
+            <br>
+          </p>
+          <br>
+
+          <p>
             <b>Reconciling Shared versus Context-Specific Information in a Neural Network Model of Latent Causes</b>
             <br>
             <b>Lu, Q.</b>, Nguyen, T., Zhang Q., Hasson, U., Griffiths, T. L., Zacks, J. M., Gershman, S. J., Norman, K. A. (2023).
             <br>
-            arXiv / under review
+            arXiv
             <br>
             <a href="https://arxiv.org/abs/2312.08519">paper</a>,
             <a href="https://github.com/qihongl/LCNet">code</a>
@@ -225,7 +237,27 @@
         <div id="talk" class="tabcontent"><br>
 
           <p>
-            <b>Episodic memory can contribute to the acquisition of structured task representation.</b>
+            <b>Episodic Memory Supports the Acquisition of Structured Task Representations</b>
+            <br>
+            <b>Lu, Q.</b>, Hummos, A., Norman, K. A. (2024).
+            <br>
+            Annual Meeting of the Cognitive Science Society (CogSci)
+            <br>
+          </p>
+          <br>
+
+          <p>
+            <b>Episodic Memory Supports the Acquisition of Structured Task Representations</b>
+            <br>
+            <b>Lu, Q.</b>, Hummos, A., Norman, K. A. (2024).
+            <br>
+            Context and Episodic Memory Symposium (CEMS)
+            <br>
+          </p>
+          <br>
+
+          <p>
+            <b>Episodic memory can contribute to the acquisition of structured task representation</b>
             <br>
             <b>Lu, Q.</b>, & Norman, K. A. (2023).
             <br>
@@ -363,7 +395,21 @@
 
         </div>
 
+
+
         <div id="poster" class="tabcontent"><br>
+
+          <p>
+            <b>Episodic Memory Supports the Acquisition of Structured Task Representations</b>
+            <br>
+            <b>Lu, Q.</b>, Hummos, A., Norman, K. A. (2024).
+            <br>
+            Proceedings of the Annual Meeting of the Cognitive Science Society 46 (46).
+            <br>
+            <a href="https://www.biorxiv.org/content/10.1101/2024.05.06.592749v1">paper</a>
+            <br>
+          </p>
+          <br>
 
 
           <p>
